umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_md+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Md#c+2#n6#u"] :bonds [] :charge 2 :spin "#u1 #s2"}
    :success true}
  :counts {
    :output {:atoms ["Md#c+2#n6#u"] :bonds [] :charge 2 :spin "#u1 #s2"}
    :success true}}
