umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_md+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Md#c+3#n5#u2"] :bonds [] :charge 3 :spin "#u2 #s3"}} :counts {:success true :output {:atoms ["Md#c+3#n6"] :bonds [] :charge 3 :spin "#u0 #s1"}}}
