umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_mn+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Mn#c+2#u5"] :bonds [] :charge 2 :spin "#u5 #s6"}} :counts {:success true :output {:atoms ["Mn#c+2#u5"] :bonds [] :charge 2 :spin "#u5 #s6"}}}
