umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_mn+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Mn#c+3#u4"} :bonds [] :charge 3 :spin "#u4 #s5"}} :counts {:success true :output {:atoms {"0" "Mn#c+3#u4"} :bonds [] :charge 3 :spin "#u4 #s5"}}}
